--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,10 @@
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=site.ilsoe@gmail.com
-spring.mail.password=lsbr nkgu egcg epad
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.security.user.name=admin
-spring.security.user.password=admin
-server.port=8080
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ilsoeconstruct
+spring.datasource.url=jdbc:mysql://localhost:3306/ilsoeconstruct
 spring.datasource.username=root
-spring.datasource.password=Hans1992
+spring.datasource.password=@Trine2023dog@
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.security.user.name=test
+spring.security.user.password=test
 
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+server.port=8080
 
